# bandlimit

./: .gitignore  MANIFEST.in  README.md  compile.sh  pyproject.toml  setup.py
Object/: Makefile  constants.h  coreMath.c  coreMath.h
bandlimit/: GaussianSinc.c  GaussianSinc.pyx  __init__.py  constants.pxd  coreMath.pxd  gaussian.c  gaussian.pyx
examples/: run_test.py
